--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -72,7 +72,7 @@
    margin: 0;
 }
 html{ 
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; 
 } 
 body{ 
   margin: var(--header-height) 0 0 0; 
@@ -110,7 +110,7 @@ input{
 }
 /* ============= Reusable CSS ClASS ============== */  
 .section{ 
-  padding: 4.rem 0 2.5rem;
+  padding: 4rem 0 2.5rem;
 } 
 .section_title{ 
   font-size:var(--h2-font-size) ; 
@@ -121,8 +121,10 @@ input{
 } 
 .container{ 
   max-width: 968px; 
-  margin-right:var(--mb-1) ; 
+  /* max-width:1300px; */
+  margin-right:var(--mb-1); 
   margin-left: var(--mb-1);
+  
 } 
 .grid{ 
   display: grid; 
@@ -137,7 +139,8 @@ input{
   top: 0; 
   left: 0; 
   z-index: var(--z-fixed); 
-  background:transparent; 
+  background:transparent;  
+  height: auto;
 } 
 /* Nav */ 
 .nav{ 
@@ -148,7 +151,7 @@ input{
 }
  
 .nav_logo,.nav_toggle{ 
-  color: var(--white-color); 
+  color: var(--white-color)!important; 
 } 
 .nav_logo{ 
   font-weight: var(--font-semi-bold); 
@@ -203,7 +206,16 @@ input{
 /* show Menu */ 
 .show-menu{ 
   right: 0;
+}  
+/* Change background Header */ 
+.scroll-header{ 
+  background-color: var(--body-color); 
+  box-shadow:0 0 4px hsla(var(--hue-color),64%,15%,.15) ;
 } 
+.scroll-header .nav_logo , .scroll-header .nav_toggle{ 
+  color: var(--title-color)!important; 
+} 
+
  
 /* Home section */ 
 .home_img{ 
@@ -217,7 +229,7 @@ input{
 }  
 .home_container{ 
   position: relative; 
-  height: calc(100vh - var(--header-height) ); 
+  height: calc(100vh - var(--header-height)); 
   align-content: center; 
   row-gap: 3rem;
 }
@@ -300,4 +312,50 @@ input{
  } 
  .button--link:hover{ 
    background: transparent;
- }
+ } 
+  
+ /* About */ 
+ .about_data{ 
+   text-align: center;
+ } 
+ .about_container{ 
+   row-gap: 2.5rem;
+ } 
+ .about_description{ 
+   margin-bottom: var(--mb-2);
+ } 
+.about_img{ 
+  display: flex; 
+  column-gap: 1rem; 
+  align-items: center; 
+  justify-content: center;
+} 
+.about_img_overlay{ 
+ overflow: var(--img-hidden); 
+} 
+.about_img_one{ 
+  width: 130px; 
+  transition: .3s;
+} 
+.about_img_two{ 
+  width:180px; 
+  transition: .3s;
+} 
+.about_img_one:hover,.about_img_two:hover{ 
+  transform: var(--img-scale);
+}
+
+/* DISCOVER  */ 
+.discover_card{ 
+  position: relative;
+  width: 200px;
+  overflow: var(--img-hidden);
+}
+.discover_data{ 
+  position: absolute;
+  bottom: 1.5rem;
+  left: 1rem; 
+} 
+.discover_title , .discover_description{ 
+  color: var(--white-color);
+}
