--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,4 +375,57 @@ input{
 
 .discover_img:hover{ 
   transform: var(--img-scale);
+} 
+
+.swiper-container-3d .swiper-slide-shadow-left,
+.swiper-container-3d .swiper-slide-shadow-right{ 
+  background-image: none;
+}
+
+/* Experience CSS */
+
+.experience_container{ 
+  row-gap: 2.5rem;
+  justify-content: center;
+  justify-items: center;
+}
+.experience_content{ 
+  grid-template-columns: repeat(3,1fr);
+  column-gap: 1rem;
+  justify-items: center;
+  padding: 0 2rem;
+}
+
+.experience_number{
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  margin-bottom: var(--mb-0-25);
+
+}
+.experience_description{ 
+  font-size: var(--small-font-size);
+}
+.experience_img{
+  position: relative;
+  padding-bottom: 2rem;
+}
+
+.experience_overlay:nth-child(1){
+  width: 263px;
+  margin-right: 2rem;
+}
+
+.experience_overlay:nth-child(2){
+  width: 120px;
+  position:absolute;
+  top: 2rem;
+  right: 0;
+}
+
+.experience_img-one,.experience_img-two{ 
+  transition: var(--img-transition);
+}
+
+.experience_overlay{ 
+  overflow: var(--img-hidden);
 }
